# rl-card-lib

./: .flake8  .gitignore  CHANGELOG.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  custom_game.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: agents.md  training-and-reports.md
docs/reference/: agents.md  cardgames.md  core.md  env-trainer.md  games.md  harness.md  index.md  report.md  visualizer.md
docx/: README.md  package_diagram.puml  sequence_diagram.puml  use_case_diagram.puml
examples/: quick_demo.py  train_klondike.py  train_macao.py
results/example/: README.md  index.html  run.json
scripts/: assemble_docs_package.py  mkdocs_hooks.py
src/rl_card_lib/: __init__.py
src/rl_card_lib/agents/: __init__.py
src/rl_card_lib/cardgames/: card.py  card_game.py  player.py
src/rl_card_lib/core/: __init__.py  card.py  deck.py  game.py  gym_wrapper.py  player.py  trainer.py
src/rl_card_lib/games/: klondike.py  macao.py
src/rl_card_lib/trainer/: __init__.py  metrics.py  trainer.py
src/rl_card_lib/utils/: __init__.py  encoding.py  visualization.py
src/rl_card_lib/visualizer/: __init__.py  visualization.py
tests/: test_agents.py  test_core.py  test_games.py  test_html_report.py  test_klondike_benchmark.py  test_klondike_solver.py  test_new_agents.py  test_public_api_imports.py  test_report.py  test_report_figures.py  test_reward_design.py  test_run_record.py  test_trainer.py  test_utils.py
